# cmake-utils

./: .clang-format  .editorconfig  .gitignore  DebugHelpers.cmake  FindClangTools.cmake  Findinclude-what-you-use.cmake  Findvcpkg.cmake  NOTICE  README.md  Toolchain.cmake  clang-tidy-checks.md  cmake-utils.cmake  codecov.yml  options.md  toolchain.cmake  workflows.md
.github/actions/test/: action.yml
.github/codeql/: test-config.yml  test.qls
.github/workflows/: bug.yml  build.yml  check.yml  clean.yml  run-build.yml  run-codeql.yml  test.yml  trial-sub.yml  trial.yml
actions/: package-lock.json  package.json
actions/analyze-report/: action.yml
actions/coverage/: action.yml
actions/src/: shared.js
clang-tools/: aux-includes.cmake  cat-result.cmake  cat.cmake  check-pch.cmake  regex.cmake  run-clang-tidy.cmake  run-clang-tools.cmake  run-include-what-you-use.cmake  scan-includes.cmake
configure/: README.md  action.yml
env-restore/: README.md  action.yml
modules/: DebugHelpers.cmake  FindClangTools.cmake  Findclang-tidy.cmake  Findinclude-what-you-use.cmake  Findvcpkg.cmake  Regex.cmake  cmake-utils.cmake
modules/clang-tools/: aux-includes-library.cmake.in  aux-includes.cmake  cat-result.cmake  cat.cmake  check-pch.cmake  clang-tidy-checks.cmake  compile_commands.cmake  msvc.imp  remove-shell-colors.ps1  run-clang-tidy.cmake  run-include-what-you-use.cmake  scan-includes.cmake
modules/settings/: _shared.cmake  common.cmake  vcpkg.cmake
modules/triplets/: x64-windows-static.cmake
msvc-dev-env/: README.md  action.yml
scripts/: run-clang-tools.bat  run-clang-tools.cmake  set-clang-tidy-config.bat
settings/: _shared.cmake  common.cmake
test/: .clang-tidy  CMakeLists.txt  CMakePresets.json  vcpkg-configuration.json  vcpkg.json
test/include/cmake-utils/: ok.h  ok_2.h
test/src/: include_error.cpp  include_error_pch.h  ok_1.cpp  ok_2.cpp  ok_pch.h  tidy_error.h  tidy_error_1.cpp  tidy_error_2.cpp  tidy_error_2.h  tidy_error_pch.h
test/subdirectory/: CMakeLists.txt  subdirectory.cpp
test/subproject/: CMakeLists.txt  subproject.cpp
triplets/: x64-windows-common.cmake
